--- a/Pages/CAF_Santa Maria da Feira.html
+++ b/Pages/CAF_Santa Maria da Feira.html
@@ -8,16 +8,20 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <img src="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\.resourch\Imagens\MainPage_Quem Somos_Logotipo.png" alt="Santa Maria da Feira - CAF">
-    </div>
-    <nav>
-        <a href="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\index.html">Home</a>
-        <a href="#onde-estamos">Onde Estamos?</a>
-        <a href="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\index.html">Serviços</a>
-    </nav>
-</header>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src=".resourch\Imagens\Logo" alt="Grande Sábio Logo">            </div>
+            <ul class="nav-links">
+                <li><a href="./index.html">Centro de Estudos</a></li>
+                <li><a href="./index.html#onde-estamos">Atividades</a></li>
+                <li><a href="./index.html#servicos">CAF</a></li>
+                <li><a href="./index.html#servicos">Formação</a></li>
+                <li><a href="./index.html#servicos">Animação</a></li>
+                <li><a href="./index.html#servicos">Transporte</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <section id="main-intro">
     <h1>Município de Santa Maria da Feira</h1>
