--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grande Sábio - Page 8</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\.resourch\Imagens\MainPage_Quem Somos_Logotipo.png" alt="Grande Sábio Logo">
-            </div>
+                <img src=".resourch/Imagens/Logo/Logotipo_Cabeçalo_Main.png" alt="Grande Sábio Logo">            </div>
             <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./index.html#onde-estamos">Onde Estamos?</a></li>
-                <li><a href="./index.html#servicos">Serviços</a></li>
+                <li><a href="./index.html">Centro de Estudos</a></li>
+                <li><a href="./index.html#onde-estamos">Atividades</a></li>
+                <li><a href="./index.html#servicos">CAF</a></li>
+                <li><a href="./index.html#servicos">Formação</a></li>
+                <li><a href="./index.html#servicos">Animação</a></li>
+                <li><a href="./index.html#servicos">Transporte</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +30,7 @@
                     <p>O Grande Sábio é um espaço de apoio escolar e de formação, cujo compromisso é proporcionar, a alunos de todas as idades, uma aprendizagem da mais elevada excelência, permitindo-lhes alcançar mais e melhor para si e preparando-os para um mundo cada vez mais competitivo. Incutimos, nos nossos alunos, métodos de estudo e hábitos de trabalho, incentivando-os a serem responsáveis e cada vez mais autónomos.</p>
                 </div>
                 <div class="about-logo">
-                    <img src="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\.resourch\Imagens\MainPage_Quem Somos_Logotipo.png" alt="Grande Sábio">
+                    <img src=".resourch/Imagens/Logo/MainPage_Quem Somos_Logotipo.png" alt="Grande Sábio">
                 </div>
             </div>
 
@@ -88,35 +90,20 @@
             </div>
         </section>
 
-        <section id="contactos" class="section">
-            <h2 class="section-title">Contactos</h2>
-            <div class="contact-info">
-                <p>Morada: Travessa Rua Bairro de Santa, 52, 1º Andar-950 Santa Maria de Lamas</p>
-                <p>Telefone: 256 376 355</p>
-                <p>Telemóvel: 965 726 98 / 939 92 90</p>
-                <p>E-mail: caf.grandesabio@hotmail.com</p>
+        <footer>
+            <div class="contacts">
+                <p><strong>Morada:</strong> Rua Bairro da Mata, 52, 1º-S, 4535-350 Santa Maria de Lamas</p>
+                <p><strong>Telefone:</strong> 256 081 380</p>
+                <p><strong>Telemóvel:</strong> 966 726 116 / 928 112 861</p>
+                <p><strong>E-mail:</strong> <a href="mailto:caf.grandesabio@gmail.com">caf.grandesabio@gmail.com</a></p>
             </div>
-            <div class="social-links">
-                <!-- Facebook -->
-                <a href="https://www.facebook.com" class="social-icon facebook" target="_blank">
-                    <img src="./resourch/Imagens/facebook.png" alt="Facebook Icon">
-                </a>
-                <!-- Instagram -->
-                <a href="https://www.instagram.com" class="social-icon instagram" target="_blank">
-                    <img src="./resourch/Imagens/instagram.png" alt="Instagram Icon">
-                </a>
-                <!-- LinkedIn -->
-                <a href="https://www.linkedin.com" class="social-icon linkedin" target="_blank">
-                    <img src="./resourch/Imagens/linkedin.png" alt="LinkedIn Icon">
-                </a>
-                <!-- YouTube -->
-                <a href="https://www.youtube.com" class="social-icon youtube" target="_blank">
-                    <img src="./resourch/Imagens/youtube.png" alt="YouTube Icon">
-                </a>
+            <div class="social">
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="youtube.png" alt="YouTube"></a>
             </div>
-        </section>
-    </main>
-
+        </footer>
     <script>
         function navigateTo(filePath) {
             window.location.href = filePath;
